--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'DF'
 - !lcsh 'John I Tzimisces, Emperor of the East, 925-976'
+- GITenberg
 title: 'Ελληνική Εποποιία, Ο Εωσφόρος: [Ιωάννης Τσιμισκής]'
 url: http://www.gutenberg.org/ebooks/39600
